Update UI for large screen

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <td><input type="number"></td>
                             </tr>
                             <tr>
-                                <td>Total Sell</td>
+                                <td>Total ELoad Sell</td>
                                 <td><input type="number"></td>
                                 <td><input type="number"></td>
                                 <td><input type="number"></td>
@@ -773,8 +773,14 @@
                         <tr></tr>
                         <tr></tr>
                         <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
                         <tr>
-                            <td class="text-lg">Profit/Loss</td>
+                            <td class="text-lg">Difference</td>
                             <td><input class="text-lg" type="number" value="34" readonly></td>
                         </tr>
                     </table>
@@ -824,7 +830,6 @@
                         </tr>
                     </table>
                 </div>
-
                 <div class="cash-info">
                     <!-- Cash Info -->
                     <table>
