Add title and actions, Add CSS and Add Theme Toggler

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   </head>
   <body>
     <div class="container">
+      <div class="header">
+          <div class="title-container">
+            <h1>KMK Communication</h1>
+          </div>
+          <div class="time-actions-container">
+            <div class="time">
+              Time
+            </div>
+            <div class="actions">
+              <button id="theme-toggle" class="button" onclick="toggleTheme()">Change Theme</button>
+              <button class="button">Save as PDF</button>
+              <button class="button">Save Locally</button>
+              <button class="button">Sync</button>
+              <button class="button-danger">Clear</button>
+            </div>
+          </div>
+      </div>
+      
       <div class="eload-accounts-container">
         <div>
           <div class="easyload-container">
