Fix button stylings, Improve theme toggler function and Add feat for current Date and Time with Day

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             <h1>KMK Communication</h1>
           </div>
           <div class="time-actions-container">
-            <div class="time">
-              Time
-            </div>
+            <div id="current-time" class="time"></div>
+            <div id="current-date" class="date"></div>
             <div class="actions">
               <button id="theme-toggle" class="button" onclick="toggleTheme()">Change Theme</button>
               <button class="button">Save as PDF</button>
