Fix input:disable style, Complete Eload and Summery Calculation with real time data saving in localstorage and getting values from localstorage on page load

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 </tr>
                 <tr>
                   <td>Total Rs</td>
-                  <td><input type="number" id="telenor-total-rs"></td>
-                  <td><input type="number" id="jazz-total-rs"></td>
-                  <td><input type="number" id="ufone-total-rs"></td>
-                  <td><input type="number" id="zong-total-rs"></td>
+                  <td><input type="number" id="telenor-total-rs" disabled></td>
+                  <td><input type="number" id="jazz-total-rs" disabled></td>
+                  <td><input type="number" id="ufone-total-rs" disabled></td>
+                  <td><input type="number" id="zong-total-rs" disabled></td>
                 </tr>
                 <tr>
                   <td>Closing Balance</td>
@@ -75,10 +75,10 @@
                 </tr>
                 <tr>
                   <td>Total ELoad Sell</td>
-                  <td><input type="number" id="telenor-total-eload-sell"></td>
-                  <td><input type="number" id="jazz-total-eload-sell"></td>
-                  <td><input type="number" id="ufone-total-eload-sell"></td>
-                  <td><input type="number" id="zong-total-eload-sell"></td>
+                  <td><input type="number" id="telenor-total-eload-sell" disabled></td>
+                  <td><input type="number" id="jazz-total-eload-sell" disabled></td>
+                  <td><input type="number" id="ufone-total-eload-sell" disabled></td>
+                  <td><input type="number" id="zong-total-eload-sell" disabled></td>
                 </tr>
               </table>
               
@@ -93,31 +93,31 @@
                 </tr>
                 <tr>
                   <td>Telenor</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="telenor-eload-summery" disabled></td>
                 </tr>
                 <tr>
                   <td>Jazz</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="jazz-eload-summery" disabled></td>
                 </tr>
                 <tr>
                   <td>Ufone</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="ufone-eload-summery" disabled></td>
                 </tr>
                 <tr>
                   <td>Zong</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="zong-eload-summery" disabled></td>
                 </tr>
                 <tr>
                   <td>Total Load</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="eload-summery-total" disabled></td>
                 </tr>
                 <tr>
                   <td>AD</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="eload-summery-ad" disabled></td>
                 </tr>
                 <tr>
                   <td>Total</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="eload-summery-total-sell" disabled></td>
                 </tr>
               </table>
             </div>
@@ -178,15 +178,15 @@
                 </tr>
                 <tr>
                   <td>Total</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="total-cards"></td>
                 </tr>
                 <tr>
                   <td>Sell</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="sell-cards"></td>
                 </tr>
                 <tr>
                   <td>Remaining</td>
-                  <td><input type="number"></td>
+                  <td><input type="number" id="remaining-cards" disabled></td>
                 </tr>
               </table>
             </div>
